@@ -7,6 +7,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   printf '%d' '"' no longer accesses out-of-bounds memory in the diagnostic.
   [bug introduced in sh-utils-1.16]
 
+  split --number l/... no longer creates extraneous files in certain cases.
+  [bug introduced in coreutils-8.8]
+
 ** New features
 
   split accepts a new --filter=CMD option.  With it, split filters output
